[project]
name = "credential-checks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "fastapi>=0.124.0",
    "uvicorn>=0.30.0",
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.7",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipython>=9.8.0",
    "pandas>=2.3.3",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["app"]
python_files = ["tests.py", "queries.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "C90",    # mccabe complexity
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 10


